# Egret

./: .env  .gitignore  .prettierrc  App_dep.tsx  README.md  drizzle.config.ts  eslint.config.js  generate-react-cli.json  index.html  package-lock.json  package.json  tailwind.config.js  test  tsconfig.json  vite.config.ts
src/: App.tsx  bindings.ts  main.tsx  styles.css
src-tauri/: .gitignore  Cargo.toml  package-lock.json  package.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0000_nappy_leo.sql
src-tauri/migrations/meta/: 0000_snapshot.json  _journal.json
src-tauri/prisma/: schema.prisma
src-tauri/prisma-cli/: Cargo.toml
src-tauri/src/: db.rs  main.rs  sound.rs  websocket.rs
src-tauri/src/companion/: emit.rs  mod.rs
src/blocks/: Alert.tsx  Link.tsx  Title.tsx  schema.ts
src/blocks/Alert/: Alert.tsx
src/blocks/Audio/: Audio.tsx
src/blocks/Bullet/: Bullet.tsx  handleEnter.ts
src/blocks/Button/: Button.tsx
src/blocks/DummyText/: DummyText.tsx
src/blocks/Header/: Header.tsx
src/blocks/Image/: Image.tsx
src/blocks/Link/: Link.tsx
src/blocks/Reference/: Reference.tsx
src/blocks/Row/: <h2 role="heading" class="text-xl font-b.html  Row.tsx
src/blocks/Title/: Title.tsx
src/classes/: keyword.ts
src/components/Actions/: Actions.tsx
src/components/AriaGroup/: AriaGroup.tsx
src/components/AriaRegion/: AriaRegion.tsx
src/components/Dialog/: Dialog.tsx  DialogProvider.tsx
src/components/DialogAnnounce/: DialogAnnounce.tsx
src/components/DialogPrompt/: DialogPrompt.tsx
src/components/DialogSelect/: DialogSelect.tsx
src/components/DocumentDetail/: DocumentDetail.tsx  test
src/components/DocumentRegion/: DocumentRegion.tsx
src/components/DocumentsOverview/: AppDocumentsOverview.tsx  DocumentsOverview.tsx
src/config/: document.ts  files.ts  keywords.ts  layout.ts  onboarding.ts  shortcut.ts
src/db/: database.ts  migrate.ts  schema.ts
src/services/: actions-registry.tsx  actions.ts  actions.tsx  documents-storage.ts
src/types/: block.ts  document-service.ts  documents.ts  keywords.ts  layout-service.ts
src/utils/: announce.ts  block.ts  blocknote.ts  config.ts  dialog.ts  documents.ts  editor.ts  enum.ts  error.ts  filesystem.ts  hotkeys.ts  keywords.ts  layout-builder.ts  layout-state.ts  layout.ts  navigation.ts  object.ts  sound.ts  speech.ts  tauri.tsx  title.ts  tree.ts  url.ts  window.ts
window/export/: index.html
window/prompt/: index.html
windows/companion/: index.html
windows/prompt/: index.html
(+63 files in other folders)
