[package]
name = "contextual-notes"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-all", "dialog-open", "dialog-save", "global-shortcut-all", "clipboard-read-text", "clipboard-write-text", "protocol-all", "fs-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-specta = { version =  "1.0.2", features = ["typescript", "javascript"] }
rodio = "0.17.3"
specta = "1.0.5"
strum_macros = "0.26.2"
warp = "0.3.7"
tokio = { version = "1.36.0", features = ["full"] }
futures-util = "0.3.30"
serde_variant = "0.1.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
