[package]
name = "prisma-cli"
version = "0.0.0"
edition = "2021"

[features]
sqlite = ["prisma-client-rust-cli/sqlite", "prisma-client-rust-cli/sqlite-create-many"]
mongodb = ["prisma-client-rust-cli/mongodb"]
postgresql = ["prisma-client-rust-cli/postgresql"]
mssql = ["prisma-client-rust-cli/mssql"]
specta = ["prisma-client-rust-cli/specta"]
mocking = ["prisma-client-rust-cli/mocking"]

[dependencies]
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", features = ["migrations"] }